// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox basic renders checked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <Component
    align="center"
    className="minTouchHeight"
  >
    <Component
      shrink={true}
    >
      <input
        checked={true}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox checked"
      >
        <Icon
          className="display--flex flex--center checkbox-indicator"
          shape="check"
          size="xs"
        />
      </span>
    </Component>
    <Component
      className="toggleLabel-container"
    >
      <span
        className="text--bold"
      >
        Hello!
      </span>
    </Component>
  </Component>
</label>
`;

exports[`Checkbox basic renders unchecked checkbox 1`] = `
<label
  className="toggleLabel label--minor display--block"
  htmlFor="hello"
>
  <Component
    align="center"
    className="minTouchHeight"
  >
    <Component
      shrink={true}
    >
      <input
        checked={false}
        className="checkbox visibility--a11yHide"
        id="hello"
        name="greeting"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="hello"
      />
      <span
        className="display--block align--center fauxToggle fauxToggle--checkbox"
      />
    </Component>
    <Component
      className="toggleLabel-container"
    >
      <span
        className=""
      >
        Hello!
      </span>
    </Component>
  </Component>
</label>
`;
